...
                .background(Circle().fill(Color.accentColor))
                .shadow(radius: 4)
        }
        .popoverTip(addFirstCardTip)
        .padding(.trailing, 16)
        .padding(.bottom, 16)
        .accessibilityIdentifier("addCard")
        .accessibilityLabel("Add Card")
        .confirmationDialog("Add Card", isPresented: $showAddCardActionSheet) {
            Button {
                addCard(ofType: .note)
            } label: {
                Label("Note", systemImage: CardType.note.systemImage)
            }
            .accessibilityIdentifier("AddNoteButton")
            
            Button {
                addCard(ofType: .todo)
            } label: {
                Label("To-do", systemImage: CardType.todo.systemImage)
            }
            .accessibilityIdentifier("AddTodoButton")
            
            Button {
                addCard(ofType: .flashcard)
            } label: {
                Label("Flashcard", systemImage: CardType.flashcard.systemImage)
            }
            .accessibilityIdentifier("AddFlashcardButton")
            
            if #available(iOS 26.0, *) {
                Button {
                    showAIGeneratorFromDialog = true
...
